Added CSS. Began filling in embed_streams view to place streams on the page.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -7,11 +7,28 @@ $light-purple: #815FC0;
 $dark-purple: #4B307B;
 $dark-gray: #737373;
 
-html {
-    background-color: $dark-gray;
-    font-family: arial;
-}
+//div {
+//    &.stream-queue {
+//        iframe {
+//            width: 20%;
+//            height: auto;
+//        }
+//    }
+//
+//    &.main-stream {
+//        iframe {
+//            width: 100%;
+//            height: auto;
+//        }
+//    }
+//}
 
 h1 {
     color: $purple;
 }
+
+html {
+    background-color: black;
+    font-family: arial;
+}
+
