Added bootstrap properly and switched to .scss. Set up page layout. Added a demo action that pre-fills the @streamers array manually.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -7,27 +7,11 @@ $light-purple: #815FC0;
 $dark-purple: #4B307B;
 $dark-gray: #737373;
 
-//div {
-//    &.stream-queue {
-//        iframe {
-//            width: 20%;
-//            height: auto;
-//        }
-//    }
-//
-//    &.main-stream {
-//        iframe {
-//            width: 100%;
-//            height: auto;
-//        }
-//    }
-//}
-
 h1 {
     color: $purple;
 }
 
-html {
+body {
     background-color: black;
     font-family: arial;
 }
