--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -1,23 +1,29 @@
 <div class="container">
-    <%= @streamers.count %> streamers.
-    <div class="row">
-        <div class="col-xs-12" id="stream-queue">
-            <% unless @streamers.count < 2 %>
+    <% if @streamers.count > 1 %>
+        <!-- Stream queue -->
+        <div class="row">
+            <div class="col-md-12" id="stream-queue">
                 <% @streamers[ 1..-1 ].each_with_index do | streamer, index | %>
-                    <iframe id="deck-player-<%= index %>" src="//player.twitch.tv/?channel=<%= streamer[ :name ] %>" frameborder="0" scrolling="no" width="320" height="320"></iframe>
+                    <iframe id="deck-player-<%= index %>" src="//player.twitch.tv/?channel=<%= streamer[ :name ] %>" frameborder="0" scrolling="no" style="width: 20%;"></iframe>
                 <% end %>
-            <% end %>
+
+            </div>
         </div>
-    </div>
+    <% end %>
     <div class="row">
-        <div class="col-xs-2" id="left-buffer">
+        <div class="col-md-2" id="left-buffer">
             <!--Left buffer-->
         </div>
-        <div class="col-xs-8" id="main-stream">
-            <iframe id="main-stream-player" src="//player.twitch.tv/?channel=<%= @streamers.first[ :name ] %>" frameborder="0" scrolling="no" width="900" height="900"></iframe>
+        <div class="col-md-8" id="main-stream">
+            <iframe id="main-stream-player" src="//player.twitch.tv/?channel=<%= @streamers.first[ :name ] %>" frameborder="0" scrolling="no" style="width: 80%;"></iframe>
         </div>
-        <div class="col-xs-2" id="right-buffer">
+        <div class="col-md-2" id="right-buffer">
             <!--Right buffer-->
         </div>
     </div>
 </div>
+
+<script>
+    var main_player_width = $( '#main-stream-player' ).width();
+    $( '#main-stream-player' ).css( { 'height': main_player_width + 'px' } );
+</script>
