Finished MVP, which will automatically place the first online stream in the main div, the other online streams in the subway below, and finally, the remaining offline streams after them. Javascript checks that the main stream is online every 10 seconds, and if it ever goes offline, the page will refresh and re-prioritize the streams. Also changed the background to be slightly off-black; may roll this back.
Moved secondary stream row below the main player. Updated the index view to reflect that.

Still need to programmatically mute secondary streams.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -6,6 +6,7 @@ $purple: #6441A5;
 $light-purple: #815FC0;
 $dark-purple: #4B307B;
 $dark-gray: #737373;
+$abyss: #111111;
 
 div {
     &#stream-queue {
@@ -36,7 +37,7 @@ h1 {
 }
 
 body {
-    background-color: black;
+    background-color: $abyss;
     font-family: arial;
 }
 
