--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to TwitchDeck!</h1>
 <h3>What is TwitchDeck?</h3>
-<p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed above in smaller players, muted by default.</p>
+<p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, muted by default.</p>
 
 <h3>How do I use it?</h3>
 <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitchdeck.tv/day9tv/covert_muffin/kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams above it, muted by default. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
