--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,10 +1,12 @@
-<h1>Welcome to TwitchDeck!</h1>
-<h3>What is TwitchDeck?</h3>
-<p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, muted by default.</p>
+<div class="container">
+    <h1>Welcome to TwitchDeck!</h1>
+    <h3>What is TwitchDeck?</h3>
+    <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, with volume turned down by default.</p>
 
-<h3>How do I use it?</h3>
-<p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitchdeck.tv/day9tv/covert_muffin/kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams above it, muted by default. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
-<p>When your primary streamer goes offline, they are moved out of the primary player, and the next online stream in your queue is moved into it. You can manually swap streams into the primary slot via drag-and-drop.</p>
+    <h3>How does it work?</h3>
+    <p>After entering your preferred priority of streamers, TwitchDeck will put the first online streamer in the main player, in the center of the screen, with the audio set to max. Next, TwitchDeck will place any remaining online streams, in order, in the subway bar under the main player with the volume turned off. Finally, offline streams will be placed behind them.</p>
+    <p>Note that currently, TwitchDeck checks whether the main stream is online or not by sending out an HTTP GET request to Twitch's APIs every 10 seconds. Each request is only a few KBs in size, but consider this if you're using TwitchDeck on a metered connection.</p>
 
-<h3>I'm a developer; can I create a fork of TwitchDeck?</h3>
-<p>Sure! TwitchDeck is an open-source project, so feel free to fork your own.</p>
+    <h3>How do I use it?</h3>
+    <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitchdeck.tv/day9tv/covert_muffin/kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams below it. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
+</div>
