--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -2,6 +2,7 @@
     <h1>Welcome to TwitchDeck!</h1>
     <h3>What is TwitchDeck?</h3>
     <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, with volume turned down by default.</p>
+    <p>For a demo of the app in action, click <%= link_to 'here', demo_path %>.</p>
 
     <h3>How does it work?</h3>
     <p>After entering your preferred priority of streamers, TwitchDeck will put the first online streamer in the main player, in the center of the screen, with the audio set to max. Next, TwitchDeck will place any remaining online streams, in order, in the subway bar under the main player with the volume turned off. Finally, offline streams will be placed behind them.</p>
