--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -1,13 +1,21 @@
 <div class="container-fluid">
     <div class="row">
+        <div class="col-md-12" id="stream-switch-tabs">
+            <span>Switch to...</span>
+            <% @streamers.each do | streamer | %>
+                <a class="button" href="<%= url_for controller: :display, action: :replace_main_stream, streamer: streamer[ :name ] %>"> <%= streamer[ :name ] %></a>
+            <% end %>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-12" id="main-stream">
-            <object id="main-stream-player" type="application/x-shockwave-flash" data="//www-cdn.jtvnw.net/swflibs/TwitchPlayer.swf" width="75%">
+            <object id="main-stream-player" type="application/x-shockwave-flash" data="//www-cdn.jtvnw.net/swflibs/TwitchPlayer.swf" width="70%">
                 <param name="allowScriptAccess" value="always" />
                 <param name="allowFullScreen" value="true" />
                 <param name="flashvars" value="channel=<%= @streamers.first[ :name ] %>&auto_play=true&start_volume=100" />
             </object>
             <span>
-                <iframe id="chat" frameborder="0" scrolling="no" src="http://twitch.tv/<%= @streamers.first[ :name ] %>/chat?popout=" width="25%" style="position: absolute;">
+                <iframe id="chat" frameborder="0" scrolling="no" src="http://twitch.tv/<%= @streamers.first[ :name ] %>/chat?popout=" width="30%" style="position: absolute;">
                 </iframe>
             </span>
         </div>
