--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -6,6 +6,17 @@ $abyss: #111111;
 
 a {
     color: $light-purple;
+
+    &.button {
+        font-weight: bold;
+        text-decoration: none;
+        background-color: $dark-purple;
+        padding: 2px 6px 2px 6px;
+        border-top: 1px solid #CCCCCC;
+        border-right: 1px solid #333333;
+        border-bottom: 1px solid #333333;
+        border-left: 1px solid #CCCCCC;
+    }
 }
 
 body {
