Updated index page.

--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -11,13 +11,10 @@
     <h3>How do I use it?</h3>
     <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitchdeck.tv/day9tv/covert_muffin/kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams below it. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
 
-    <h3>What if I have more questions or an issue?</h3>
-    <p>Feel free to send me an <%= mail_to 'jzisser9@gmail.com', 'email' %> or a <%= link_to 'Tweet', 'http://www.twitter.com/JonathanZisser' %>.</p>
-
     <h1>Terms of Service</h1>
     <p>Last updated November 29, 2015.</p>
     <p>TwitchDeck is provided free-of-charge for general use, does not collect any personal information or login credentials, and is subject to all of the terms of service of Twitch's embedded video players and chat.</p>
-    <p>All code assets are property of the developer, Jonathan Zisser. TwitchDeck will be open-source once it leaves beta status. When this occurs, you are welcome to create your own fork of TwitchDeck as long as you provide credit to the original developer.</p>
+    <p>TwitchDeck will be open-source once it leaves beta status. When this occurs, you are welcome to create your own fork of TwitchDeck.</p>
 
     <%= render 'partials/beta_tag' %>
 </div>
