Moved the TwitchDeck Beta text to the top-right of the window to avoid overlapping with the horizontal scroll bar for the deck.

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,6 +1,6 @@
 p {
-    &.bottom-right {
-        bottom: 0;
+    &.top-right {
+        top: 0;
         position: fixed;
         right: 0;
     }
