Added information about the TwitchDeck subreddit to the index page.

--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -11,6 +11,9 @@
     <h3>How do I use it?</h3>
     <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitchdeck.tv/day9tv/covert_muffin/kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams below it. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
 
+    <h3>Where can I get updates, request features, or report a problem?</h3>
+    <p>Check out the TwitchDeck subreddit at <%= link_to 'r/twitchdeck', 'http://www.reddit.com/r/twitchdeck' %></p>
+
     <h1>Terms of Service</h1>
     <p>Last updated November 29, 2015.</p>
     <p>TwitchDeck is provided free-of-charge for general use, does not collect any personal information or login credentials, and is subject to all of the terms of service of Twitch's embedded video players and chat.</p>
