--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -9,11 +9,8 @@
     </div>
     <div class="row">
         <div class="col-md-12" id="main-stream">
-            <object id="main-stream-player" type="application/x-shockwave-flash" data="https://www-cdn.jtvnw.net/swflibs/TwitchPlayer.swf" width="70%">
-                <param name="allowScriptAccess" value="always" />
-                <param name="allowFullScreen" value="true" />
-                <param name="flashvars" value="channel=<%= @streamers.first[ 'name' ] %>&auto_play=true&start_volume=100" />
-            </object>
+            <iframe id="main-stream-player" src="http://player.twitch.tv/?channel=<%= @streamers.first[ 'name' ] %>&auto_play=true&muted=false" width="70%">
+            </iframe>
             <span>
                 <iframe id="chat" frameborder="0" scrolling="no" src="https://twitch.tv/<%= @streamers.first[ 'name' ] %>/chat?popout=" width="30%" style="position: absolute;">
                 </iframe>
@@ -25,11 +22,8 @@
         <div class="row">
             <div class="col-md-12" id="stream-queue" style="float: left;">
                 <% @streamers[ 1..-1 ].each do | streamer | %>
-                    <object class="on-deck-stream" type="application/x-shockwave-flash" data="https://www-cdn.jtvnw.net/swflibs/TwitchPlayer.swf" width="19%">
-                        <param name="allowScriptAccess" value="always" />
-                        <param name="allowFullScreen" value="true" />
-                        <param name="flashvars" value="channel=<%= streamer[ 'name' ] %>&auto_play=true&start_volume=0"/>
-                    </object>
+                    <iframe class="on-deck-stream" src="http://player.twitch.tv/?channel=<%= streamer[ 'name' ] %>&auto_play=true&muted=true">
+                    </iframe>
                 <% end %>
             </div>
         </div>
@@ -44,16 +38,14 @@
      */
     var resize_main_player = function() {
         var main_player_width = $( '#main-stream-player' ).width();
-        $( '#main-stream-player' ).css( { 'height': ( 9 * main_player_width / 16 ) + 'px' } );
+        $( '#main-stream-player' ).height( 9 * main_player_width / 16 );
 
         // Resize chat iframe height
-        var chat_height = $( '#main-stream-player').height();
-        $( '#chat' ).css( { 'height': chat_height + 'px' } );
+        $( '#chat' ).height( $( '#main-stream-player').height() );
 
         // Resize on-deck streams as well.
         var on_deck_width = $( '.on-deck-stream' ).width();
-        console.log( 'width:' + on_deck_width );
-        $( '.on-deck-stream' ).css( { 'height': ( 9 * on_deck_width / 16 ) + 'px' } );
+        $( '.on-deck-stream' ).height( 9 * on_deck_width / 16 );
     }
 
     // Whenever the window resizes, re-adjust the height of the main player div.
