--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,24 +1,31 @@
-<div class="container">
-    <h1>Welcome to the TwitchDeck Beta!</h1>
-    <h3>What is TwitchDeck?</h3>
-    <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, with volume turned down by default.</p>
-    <p>For a demo of the app in action, click <%= link_to 'here', demo_path %>.</p>
+<html>
+    <head>
+        <title>TwitchDeck - Welcome!</title>
+    </head>
+    <body>
+        <div class="container">
+            <h1>Welcome to the TwitchDeck Beta!</h1>
+            <h3>What is TwitchDeck?</h3>
+            <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, with volume turned down by default.</p>
+            <p>For a demo of the app in action, click <%= link_to 'here', demo_path %>.</p>
 
-    <h3>How does it work?</h3>
-    <p>After entering your preferred priority of streamers, TwitchDeck will put the first online streamer in the main player, in the center of the screen, with the audio set to max. Next, TwitchDeck will place any remaining online streams, in order, in the subway bar under the main player with the volume turned off. Finally, offline streams will be placed behind them.</p>
-    <p>Note that currently, TwitchDeck checks whether the main stream is online or not by sending out an HTTP GET request to Twitch's APIs every 10 seconds. Each request is only a few KBs in size, but consider this if you're using TwitchDeck on a metered connection.</p>
+            <h3>How does it work?</h3>
+            <p>After entering your preferred priority of streamers, TwitchDeck will put the first online streamer in the main player, in the center of the screen, with the audio set to max. Next, TwitchDeck will place any remaining online streams, in order, in the subway bar under the main player with the volume turned off. Finally, offline streams will be placed behind them.</p>
+            <p>Note that currently, TwitchDeck checks whether the main stream is online or not by sending out an HTTP GET request to Twitch's APIs every 10 seconds. Each request is only a few KBs in size, but consider this if you're using TwitchDeck on a metered connection.</p>
 
-    <h3>How do I use it?</h3>
-    <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitch-deck.herokuapp.com/day9tv&covert_muffin&kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams below it. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
-    <p>In this example, once Day[9]'s stream goes offline, TwitchDeck will check the other two streams, and if either are online, it will take the main stream over and move Day[9]'s stream to the deck.</p>
+            <h3>How do I use it?</h3>
+            <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitch-deck.herokuapp.com/day9tv&covert_muffin&kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams below it. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
+            <p>In this example, once Day[9]'s stream goes offline, TwitchDeck will check the other two streams, and if either are online, it will take the main stream over and move Day[9]'s stream to the deck.</p>
 
-    <h3>Where can I get updates, request features, or report a problem?</h3>
-    <p>Check out the TwitchDeck subreddit at <%= link_to 'r/twitchdeck', 'http://www.reddit.com/r/twitchdeck' %></p>
+            <h3>Where can I get updates, request features, or report a problem?</h3>
+            <p>Check out the TwitchDeck subreddit at <%= link_to 'r/twitchdeck', 'http://www.reddit.com/r/twitchdeck' %></p>
 
-    <h1>Terms of Service</h1>
-    <p>Last updated November 29, 2015.</p>
-    <p>TwitchDeck is provided free-of-charge for general use, does not collect any personal information or login credentials, and is subject to all of the terms of service of Twitch's embedded video players and chat.</p>
-    <p>TwitchDeck will be open-source once it leaves beta status. When this occurs, you are welcome to create your own fork of TwitchDeck.</p>
+            <h1>Terms of Service</h1>
+            <p>Last updated November 29, 2015.</p>
+            <p>TwitchDeck is provided free-of-charge for general use, does not collect any personal information or login credentials, and is subject to all of the terms of service of Twitch's embedded video players and chat.</p>
+            <p>TwitchDeck will be open-source once it leaves beta status. When this occurs, you are welcome to create your own fork of TwitchDeck.</p>
 
-    <%= render 'partials/beta_tag' %>
-</div>
+            <%= render 'partials/beta_tag' %>
+        </div>
+    </body>
+</html>
