Added Google Analytics Javascript code.

--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>TwitchDeck - Welcome!</title>
+        <%= render 'partials/google_analytics_init' %>
     </head>
     <body>
         <div class="container">
