--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>TwitchDeck</title>
+    <%= render 'partials/google_analytics_init' %>
 </head>
 <body>
 <div class="container-fluid">
