Added privacy policy, highlighting Google Analytics usage. Updated beta tag to include a link to the privacy policy. Moved variables to a new "variables.scss" file, which is imported elsewhere to allow variable use everywhere.

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,5 +1,8 @@
-p {
+@import 'variables';
+
+div {
     &.top-right {
+        background-color: $abyss;
         top: 0;
         position: fixed;
         right: 0;
