--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -22,9 +22,15 @@
             <p>Check out the TwitchDeck subreddit at <%= link_to 'r/twitchdeck', 'http://www.reddit.com/r/twitchdeck' %></p>
 
             <h1>Terms of Service</h1>
-            <p>Last updated November 29, 2015.</p>
+            <p><b>Last updated November 29, 2015.</b></p>
             <p>TwitchDeck is provided free-of-charge for general use, does not collect any personal information or login credentials, and is subject to all of the terms of service of Twitch's embedded video players and chat.</p>
             <p>TwitchDeck will be open-source once it leaves beta status. When this occurs, you are welcome to create your own fork of TwitchDeck.</p>
+
+            <h1 id="privacy-policy">Privacy Policy</h1>
+            <p><b>Last updated December 4, 2015.</b></p>
+            <p>TwitchDeck makes use of the widely-used Google Analytics product to aggregate web site usage data, and as such, is subjected to all of Google's terms and conditions of use, including the use of cookies.</p>
+            <p>Google Analytics does not collect personal information about site visitors, as noted in their documentation <%= link_to 'here', 'https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage' %>. Specifically:</p>
+            <blockquote cite="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">Important: Google Analytics does not store any personal information about your website users. Read the Google Analytics privacy document for more details.</blockquote>
 
             <%= render 'partials/beta_tag' %>
         </div>
