--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -1,8 +1,4 @@
-$light-purple: #815FC0;
-$purple: #6441A5;
-$dark-purple: #4B307B;
-$dark-gray: #737373;
-$abyss: #111111;
+@import 'variables';
 
 a {
     color: $light-purple;
@@ -12,10 +8,9 @@ a {
         text-decoration: none;
         background-color: $dark-purple;
         padding: 2px 6px 2px 6px;
-        border-top: 1px solid #CCCCCC;
-        border-right: 1px solid #333333;
-        border-bottom: 1px solid #333333;
-        border-left: 1px solid #CCCCCC;
+        border: 1px solid #cccccc;
+        border-right-color: #333333;
+        border-bottom-color: #333333;
     }
 }
 
