--- a/app/views/partials/_beta_tag.html.erb
+++ b/app/views/partials/_beta_tag.html.erb
@@ -1,3 +1,3 @@
-<p class="top-right beta">
-    TWITCHDECK BETA
-</p>
+<div class="top-right beta">
+    TWITCHDECK BETA - <%= link_to 'Privacy Policy', root_path( anchor: 'privacy-policy' ) %>
+</div>
